kubernetes/pingvinshare/manifest/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pingvinshare
  namespace: my-pingvinshare
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: selfsigned
spec:
  rules:
  - host: pingvinshare.local.127.0.0.1.sslip.io
    http:
      paths:
      - backend:
          service:
            name: pingvinshare
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls: []
