kubernetes/pingvinshare/manifest/netpol.yml
# default deny
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-ingress
  namespace: my-pingvinshare
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-egress
  namespace: my-pingvinshare
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53

# ingress from proxy namespaces allow
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ns-reverse-proxy
  namespace: my-pingvinshare
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: my-cloudflared
      ports:
        - protocol: TCP
          port: 3000
